<resources>
    <string name="app_name">ContactsApp2-5</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="textview">Janette Doe</string>
    <string name="textview1">Jonathan Doe</string>
    <string name="textview2">Female</string>
    <string name="textview3">Male</string>
    <string name="textview4">See contact</string>

    <string name="textview5">Maple Lane, Kansas 00000</string>
    <string name="textview6">000-000-0000</string>
    <string name="textview7">Pine Blvd, Oklahoma 11111</string>
    <string name="textview8">111-111-1111</string>
</resources>
